build-files/poppunk/2.7.6/README.md
# PopPUNK container

Main tool : 
- [PopPUNK](https://github.com/bacpop/PopPUNK)

<details>

<summary>Additional tools installed via micromamba:</summary>

```

  Name                                  Version       Build                    Channel    
────────────────────────────────────────────────────────────────────────────────────────────
  _libgcc_mutex                         0.1           conda_forge              conda-forge
  _openmp_mutex                         4.5           2_gnu                    conda-forge
  _x86_64-microarch-level               3             2_x86_64_v3              conda-forge
  alsa-lib                              1.2.14        hb9d3cd8_0               conda-forge
  aom                                   3.9.1         hac33072_0               conda-forge
  at-spi2-atk                           2.38.0        h0630a04_3               conda-forge
  at-spi2-core                          2.40.3        h0630a04_0               conda-forge
  atk-1.0                               2.38.0        h04ea711_2               conda-forge
  attr                                  2.5.1         h166bdaf_1               conda-forge
  biopython                             1.85          py312h66e93f0_1          conda-forge
  brotli                                1.1.0         hb9d3cd8_3               conda-forge
  brotli-bin                            1.1.0         hb9d3cd8_3               conda-forge
  brotli-python                         1.1.0         py312h2ec8cdc_3          conda-forge
  bzip2                                 1.0.8         h4bc722e_7               conda-forge
  c-ares                                1.34.5        hb9d3cd8_0               conda-forge
  ca-certificates                       2025.6.15     hbd8a1cb_0               conda-forge
  cached-property                       1.5.2         hd8ed1ab_1               conda-forge
  cached_property                       1.5.2         pyha770c72_1             conda-forge
  cairo                                 1.18.4        h3394656_0               conda-forge
  cairomm                               1.16.2        ha770c72_1               conda-forge
  cairomm-1.16                          1.16.2        h7e731d7_1               conda-forge
  certifi                               2025.6.15     pyhd8ed1ab_0             conda-forge
  cffi                                  1.17.1        py312h06ac9bb_0          conda-forge
  charset-normalizer                    3.4.2         pyhd8ed1ab_0             conda-forge
  colorama                              0.4.6         pyhd8ed1ab_1             conda-forge
  contourpy                             1.3.2         py312h68727a3_0          conda-forge
  cuda-version                          12.9          h4f385c5_3               conda-forge
  cycler                                0.12.1        pyhd8ed1ab_1             conda-forge
  dav1d                                 1.2.1         hd590300_0               conda-forge
  dbus                                  1.16.2        h3c4dab8_0               conda-forge
  dendropy                              5.0.8         pyhdfd78af_1             bioconda   
  docopt                                0.6.2         pyhd8ed1ab_2             conda-forge
  epoxy                                 1.5.10        h166bdaf_1               conda-forge
  expat                                 2.7.0         h5888daf_0               conda-forge
  ffmpeg                                7.1.1         gpl_h127656b_906         conda-forge
  font-ttf-dejavu-sans-mono             2.37          hab24e00_0               conda-forge
  font-ttf-inconsolata                  3.000         h77eed37_0               conda-forge
  font-ttf-source-code-pro              2.038         h77eed37_0               conda-forge
  font-ttf-ubuntu                       0.83          h77eed37_3               conda-forge
  fontconfig                            2.15.0        h7e30c49_1               conda-forge
  fonts-conda-ecosystem                 1             0                        conda-forge
  fonts-conda-forge                     1             0                        conda-forge
  fonttools                             4.58.4        py312h178313f_0          conda-forge
  freetype                              2.13.3        ha770c72_1               conda-forge
  fribidi                               1.0.10        h36c2ea0_0               conda-forge
  gdk-pixbuf                            2.42.12       hb9ae30d_0               conda-forge
  gettext                               0.24.1        h5888daf_0               conda-forge
  gettext-tools                         0.24.1        h5888daf_0               conda-forge
  glib-tools                            2.84.2        h4833e2c_0               conda-forge
  gmp                                   6.3.0         hac33072_2               conda-forge
  graph-tool                            2.97          py312h302780e_300        conda-forge
  graph-tool-base                       2.97          py312h55cd2aa_300        conda-forge
  graphite2                             1.3.14        h5888daf_0               conda-forge
  gtk3                                  3.24.43       h0c6a113_5               conda-forge
  h2                                    4.2.0         pyhd8ed1ab_0             conda-forge
  h5py                                  3.14.0        nompi_py312h3faca00_100  conda-forge
  harfbuzz                              11.2.1        h3beb420_0               conda-forge
  hdbscan                               0.8.39        py312hc0a28a1_0          conda-forge
  hdf5                                  1.14.6        nompi_h2d575fe_101       conda-forge
  hicolor-icon-theme                    0.17          ha770c72_2               conda-forge
  hpack                                 4.1.0         pyhd8ed1ab_0             conda-forge
  hyperframe                            6.1.0         pyhd8ed1ab_0             conda-forge
  icu                                   75.1          he02047a_0               conda-forge
  idna                                  3.10          pyhd8ed1ab_1             conda-forge
  joblib                                1.5.1         pyhd8ed1ab_0             conda-forge
  kernel-headers_linux-64               3.10.0        he073ed8_18              conda-forge
  keyutils                              1.6.1         h166bdaf_0               conda-forge
  kiwisolver                            1.4.8         py312h84d6215_0          conda-forge
  krb5                                  1.21.3        h659f571_0               conda-forge
  lame                                  3.100         h166bdaf_1003            conda-forge
  lcms2                                 2.17          h717163a_0               conda-forge
  ld_impl_linux-64                      2.43          h1423503_5               conda-forge
  lerc                                  4.0.0         h0aef613_1               conda-forge
  level-zero                            1.23.0        h84d6215_0               conda-forge
  libabseil                             20250127.1    cxx17_hbbce691_0         conda-forge
  libaec                                1.1.4         h3f801dc_0               conda-forge
  libasprintf                           0.24.1        h8e693c7_0               conda-forge
  libasprintf-devel                     0.24.1        h8e693c7_0               conda-forge
  libass                                0.17.3        h52826cd_2               conda-forge
  libblas                               3.9.0         32_h59b9bed_openblas     conda-forge
  libboost                              1.86.0        h6c02f8c_3               conda-forge
  libboost-python                       1.86.0        py312hc39e661_3          conda-forge
  libbrotlicommon                       1.1.0         hb9d3cd8_3               conda-forge
  libbrotlidec                          1.1.0         hb9d3cd8_3               conda-forge
  libbrotlienc                          1.1.0         hb9d3cd8_3               conda-forge
  libcap                                2.75          h39aace5_0               conda-forge
  libcblas                              3.9.0         32_he106b2a_openblas     conda-forge
  libcups                               2.3.3         hb8b1518_5               conda-forge
  libcurl                               8.14.1        h332b0f4_0               conda-forge
  libdeflate                            1.24          h86f0d12_0               conda-forge
  libdrm                                2.4.125       hb9d3cd8_0               conda-forge
  libedit                               3.1.20250104  pl5321h7949ede_0         conda-forge
  libegl                                1.7.0         ha4b6fd6_2               conda-forge
  libev                                 4.33          hd590300_2               conda-forge
  libexpat                              2.7.0         h5888daf_0               conda-forge
  libffi                                3.4.6         h2dba641_1               conda-forge
  libflac                               1.4.3         h59595ed_0               conda-forge
  libfreetype                           2.13.3        ha770c72_1               conda-forge
  libfreetype6                          2.13.3        h48d6fc4_1               conda-forge
  libgcc                                15.1.0        h767d61c_3               conda-forge
  libgcc-ng                             15.1.0        h69a702a_3               conda-forge
  libgcrypt-lib                         1.11.1        hb9d3cd8_0               conda-forge
  libgettextpo                          0.24.1        h5888daf_0               conda-forge
  libgettextpo-devel                    0.24.1        h5888daf_0               conda-forge
  libgfortran                           15.1.0        h69a702a_3               conda-forge
  libgfortran5                          15.1.0        hcea5267_3               conda-forge
  libgirepository                       1.84.0        h0dcfedc_1               conda-forge
  libgl                                 1.7.0         ha4b6fd6_2               conda-forge
  libglib                               2.84.2        h3618099_0               conda-forge
  libglvnd                              1.7.0         ha4b6fd6_2               conda-forge
  libglx                                1.7.0         ha4b6fd6_2               conda-forge
  libgomp                               15.1.0        h767d61c_3               conda-forge
  libgpg-error                          1.55          h3f2d84a_0               conda-forge
  libhwloc                              2.11.2        default_h0d58e46_1001    conda-forge
  libiconv                              1.18          h4ce23a2_1               conda-forge
  libjpeg-turbo                         3.1.0         hb9d3cd8_0               conda-forge
  liblapack                             3.9.0         32_h7ac8fdf_openblas     conda-forge
  liblzma                               5.8.1         hb9d3cd8_2               conda-forge
  libnghttp2                            1.64.0        h161d5f1_0               conda-forge
  libnsl                                2.0.1         hb9d3cd8_1               conda-forge
  libogg                                1.3.5         hd0c01bc_1               conda-forge
  libopenblas                           0.3.30        pthreads_h94d23a6_0      conda-forge
  libopenvino                           2025.0.0      hdc3f47d_3               conda-forge
  libopenvino-auto-batch-plugin         2025.0.0      h4d9b6c2_3               conda-forge
  libopenvino-auto-plugin               2025.0.0      h4d9b6c2_3               conda-forge
  libopenvino-hetero-plugin             2025.0.0      h981d57b_3               conda-forge
  libopenvino-intel-cpu-plugin          2025.0.0      hdc3f47d_3               conda-forge
  libopenvino-intel-gpu-plugin          2025.0.0      hdc3f47d_3               conda-forge
  libopenvino-intel-npu-plugin          2025.0.0      hdc3f47d_3               conda-forge
  libopenvino-ir-frontend               2025.0.0      h981d57b_3               conda-forge
  libopenvino-onnx-frontend             2025.0.0      h0e684df_3               conda-forge
  libopenvino-paddle-frontend           2025.0.0      h0e684df_3               conda-forge
  libopenvino-pytorch-frontend          2025.0.0      h5888daf_3               conda-forge
  libopenvino-tensorflow-frontend       2025.0.0      h684f15b_3               conda-forge
  libopenvino-tensorflow-lite-frontend  2025.0.0      h5888daf_3               conda-forge
  libopus                               1.5.2         hd0c01bc_0               conda-forge
  libpciaccess                          0.18          hb9d3cd8_0               conda-forge
  libpng                                1.6.49        h943b412_0               conda-forge
  libprotobuf                           5.29.3        h501fc15_1               conda-forge
  librsvg                               2.58.4        he92a37e_3               conda-forge
  libsndfile                            1.2.2         hc60ed4a_1               conda-forge
  libsqlite                             3.50.2        h6cd9bfd_0               conda-forge
  libssh2                               1.11.1        hcf80075_0               conda-forge
  libstdcxx                             15.1.0        h8f9b012_3               conda-forge
  libstdcxx-ng                          15.1.0        h4852527_3               conda-forge
  libsystemd0                           257.7         h4e0b6ca_0               conda-forge
  libtiff                               4.7.0         hf01ce69_5               conda-forge
  libudev1                              257.7         hbe16f8c_0               conda-forge
  libunwind                             1.6.2         h9c3ff4c_0               conda-forge
  liburing                              2.10          h84d6215_0               conda-forge
  libusb                                1.0.29        h73b1eb8_0               conda-forge
  libuuid                               2.38.1        h0b41bf4_0               conda-forge
  libva                                 2.22.0        h4f16b4b_2               conda-forge
  libvorbis                             1.3.7         h9c3ff4c_0               conda-forge
  libvpx                                1.14.1        hac33072_0               conda-forge
  libwebp-base                          1.5.0         h851e524_0               conda-forge
  libxcb                                1.17.0        h8a09558_0               conda-forge
  libxcrypt                             4.4.36        hd590300_1               conda-forge
  libxkbcommon                          1.10.0        h65c71a3_0               conda-forge
  libxml2                               2.13.8        h4bc477f_0               conda-forge
  libzlib                               1.3.1         hb9d3cd8_2               conda-forge
  lz4-c                                 1.10.0        h5888daf_1               conda-forge
  mandrake                              1.2.5         py312h85baa9b_0          conda-forge
  matplotlib-base                       3.10.3        py312hd3ec401_0          conda-forge
  mpg123                                1.32.9        hc50e24c_0               conda-forge
  munkres                               1.1.4         pyhd8ed1ab_1             conda-forge
  narwhals                              1.44.0        pyhe01879c_0             conda-forge
  ncurses                               6.5           h2d0b736_3               conda-forge
  networkx                              3.5           pyhe01879c_0             conda-forge
  numpy                                 2.3.0         py312h6cf2f7f_0          conda-forge
  ocl-icd                               2.3.3         hb9d3cd8_0               conda-forge
  openblas                              0.3.30        pthreads_h6ec200e_0      conda-forge
  opencl-headers                        2025.06.13    h5888daf_0               conda-forge
  openh264                              2.6.0         hc22cd8d_0               conda-forge
  openjpeg                              2.5.3         h5fbd93e_0               conda-forge
  openssl                               3.5.0         h7b32b05_1               conda-forge
  packaging                             25.0          pyh29332c3_1             conda-forge
  pandas                                2.3.0         py312hf9745cd_0          conda-forge
  pango                                 1.56.4        hadf4263_0               conda-forge
  pcre2                                 10.45         hc749103_0               conda-forge
  pillow                                11.2.1        py312h80c1187_0          conda-forge
  pip                                   25.1.1        pyh8b19718_0             conda-forge
  pixman                                0.46.2        h29eaf8c_0               conda-forge
  plotly                                6.2.0         pyhd8ed1ab_0             conda-forge
  poppunk                               2.7.6         py312hc15d307_0          bioconda   
  pp-sketchlib                          2.1.5         py312hbf65ae3_1          conda-forge
  pthread-stubs                         0.4           hb9d3cd8_1002            conda-forge
  pugixml                               1.15          h3f63f65_0               conda-forge
  pulseaudio-client                     17.0          hac146a9_1               conda-forge
  pycairo                               1.28.0        py312hac037c1_0          conda-forge
  pycparser                             2.22          pyh29332c3_1             conda-forge
  pygobject                             3.50.0        py312hf4b392c_1          conda-forge
  pyparsing                             3.2.3         pyhd8ed1ab_1             conda-forge
  pysocks                               1.7.1         pyha55dd90_7             conda-forge
  python                                3.12.11       h9e4cc4f_0_cpython       conda-forge
  python-dateutil                       2.9.0.post0   pyhe01879c_2             conda-forge
  python-tzdata                         2025.2        pyhd8ed1ab_0             conda-forge
  python_abi                            3.12          7_cp312                  conda-forge
  pytz                                  2025.2        pyhd8ed1ab_0             conda-forge
  qhull                                 2020.2        h434a139_5               conda-forge
  rapidnj                               2.3.2         h9948957_6               bioconda   
  readline                              8.2           h8c095d6_2               conda-forge
  requests                              2.32.4        pyhd8ed1ab_0             conda-forge
  scikit-learn                          1.7.0         py312h7a48858_1          conda-forge
  scipy                                 1.16.0        py312hf734454_0          conda-forge
  sdl2                                  2.32.54       h3f2d84a_0               conda-forge
  sdl3                                  3.2.16        he3e324a_0               conda-forge
  setuptools                            80.9.0        pyhff2d567_0             conda-forge
  sigcpp-3.0                            3.6.0         h59595ed_0               conda-forge
  six                                   1.17.0        pyhd8ed1ab_0             conda-forge
  snappy                                1.2.1         h8bd8927_1               conda-forge
  sparsehash                            2.0.4         hcb278e6_1               conda-forge
  svt-av1                               3.0.2         h5888daf_0               conda-forge
  sysroot_linux-64                      2.17          h0157908_18              conda-forge
  tbb                                   2022.1.0      h4ce085d_0               conda-forge
  threadpoolctl                         3.6.0         pyhecae5ae_0             conda-forge
  tk                                    8.6.13        noxft_hd72426e_102       conda-forge
  tqdm                                  4.67.1        pyhd8ed1ab_1             conda-forge
  treeswift                             1.1.45        pyh7e72e81_0             bioconda   
  tzdata                                2025b         h78e105d_0               conda-forge
  unicodedata2                          16.0.0        py312h66e93f0_0          conda-forge
  urllib3                               2.5.0         pyhd8ed1ab_0             conda-forge
  wayland                               1.23.1        h3e06ad9_1               conda-forge
  wayland-protocols                     1.45          hd8ed1ab_0               conda-forge
  wheel                                 0.45.1        pyhd8ed1ab_1             conda-forge
  x264                                  1!164.3095    h166bdaf_2               conda-forge
  x265                                  3.5           h924138e_3               conda-forge
  xkeyboard-config                      2.45          hb9d3cd8_0               conda-forge
  xorg-libice                           1.1.2         hb9d3cd8_0               conda-forge
  xorg-libsm                            1.2.6         he73a12e_0               conda-forge
  xorg-libx11                           1.8.12        h4f16b4b_0               conda-forge
  xorg-libxau                           1.0.12        hb9d3cd8_0               conda-forge
  xorg-libxaw                           1.0.16        hb9d3cd8_0               conda-forge
  xorg-libxcomposite                    0.4.6         hb9d3cd8_2               conda-forge
  xorg-libxcursor                       1.2.3         hb9d3cd8_0               conda-forge
  xorg-libxdamage                       1.1.6         hb9d3cd8_0               conda-forge
  xorg-libxdmcp                         1.1.5         hb9d3cd8_0               conda-forge
  xorg-libxext                          1.3.6         hb9d3cd8_0               conda-forge
  xorg-libxfixes                        6.0.1         hb9d3cd8_0               conda-forge
  xorg-libxi                            1.8.2         hb9d3cd8_0               conda-forge
  xorg-libxinerama                      1.1.5         h5888daf_1               conda-forge
  xorg-libxmu                           1.2.1         hb9d3cd8_1               conda-forge
  xorg-libxpm                           3.5.17        hb9d3cd8_1               conda-forge
  xorg-libxrandr                        1.5.4         hb9d3cd8_0               conda-forge
  xorg-libxrender                       0.9.12        hb9d3cd8_0               conda-forge
  xorg-libxscrnsaver                    1.2.4         hb9d3cd8_0               conda-forge
  xorg-libxt                            1.3.1         hb9d3cd8_0               conda-forge
  xorg-libxtst                          1.2.5         hb9d3cd8_3               conda-forge
  xorg-xextproto                        7.3.0         hb9d3cd8_1004            conda-forge
  zlib                                  1.3.1         hb9d3cd8_2               conda-forge
  zstandard                             0.23.0        py312h66e93f0_2          conda-forge
  zstd                                  1.5.7         hb8e6e7a_2               conda-forge
```

</details>

Full documentation: [https://poppunk.readthedocs.io/en/latest/](https://poppunk.readthedocs.io/en/latest/)

PopPUNK is also available as a webtool: [https://www.poppunk.net/](https://www.poppunk.net/)

PopPUNK is a tool for clustering genomes.

*NOTE: This docker image is intended for the CLI usage of the PopPUNK tool. It has not been built with the full web-interface functionality in mind.*

## Example Usage

This example is for usage of PopPUNK for Streptococcus pneumoniae clustering using a database & reference files provided by the [Global Pneumococcal Sequencing Project](https://www.pneumogen.net/gps/training_command_line.html). An example S. pneumoniae genome can be obtained from [here](https://github.com/rpetit3/pbptyper/blob/main/test/SRR2912551.fna.gz)

```bash
# poppunk requires an input File Of File Names (FOFN). headerless TSV with a sample name (first column), followed by path to input FASTA
$ echo -e "SRR2912551\t/data/SRR2912551.fna.gz" > poppunk_input.tsv

# showing reference files, FASTA input, and poppunk_input.tsv
$ ls
GPS_v6/  GPS_v6_external_clusters.csv  SRR2912551.fna.gz  poppunk_input.tsv

# run the docker container interactively
# followed by poppunk command run inside the container
$ docker run --rm -ti -v ${PWD}:/data -u $(id -u):$(id -g) staphb/poppunk:2.6.2
$ poppunk_assign --db GPS_v6 --distances GPS_v6/GPS_v6.dists --query /data/poppunk_input.tsv --output docker_test --external-clustering GPS_v6_external_clusters.csv
PopPUNK: assign
        (with backend: sketchlib v2.0.0
         sketchlib: /opt/conda/envs/poppunk-env/lib/python3.10/site-packages/pp_sketchlib.cpython-310-x86_64-linux-gnu.so)

Graph-tools OpenMP parallelisation enabled: with 1 threads
Mode: Assigning clusters of query sequences

Loading previously refined model
Completed model loading
Sketching 1 genomes using 1 thread(s)
Progress (CPU): 1 / 1
Writing sketches to file
WARNING: versions of input databases sketches are different, results may not be compatible
Calculating distances using 1 thread(s)
Progress (CPU): 100.0%
Selected type isolate for distance QC is 10050_2#1
Network loaded: 42163 samples

Done
```
