build-files/poppunk/2.7.7/README.md
# PopPUNK container

Main tool : 
- [PopPUNK](https://github.com/bacpop/PopPUNK)

<details>

<summary>Additional tools installed via micromamba:</summary>

```
List of packages in environment: "/opt/conda/envs/poppunk-env"

  Name                                  Version       Build                    Channel    
────────────────────────────────────────────────────────────────────────────────────────────
  _libgcc_mutex                         0.1           conda_forge              conda-forge
  _openmp_mutex                         4.5           2_gnu                    conda-forge
  _x86_64-microarch-level               3             3_x86_64_v3              conda-forge
  alsa-lib                              1.2.15.1      hb03c661_0               conda-forge
  aom                                   3.9.1         hac33072_0               conda-forge
  at-spi2-atk                           2.38.0        h0630a04_3               conda-forge
  at-spi2-core                          2.40.3        h0630a04_0               conda-forge
  atk-1.0                               2.38.0        h04ea711_2               conda-forge
  attr                                  2.5.2         h39aace5_0               conda-forge
  backports.zstd                        1.3.0         py312h90b7ffd_0          conda-forge
  biopython                             1.86          py312h4c3975b_0          conda-forge
  brotli                                1.2.0         hed03a55_1               conda-forge
  brotli-bin                            1.2.0         hb03c661_1               conda-forge
  brotli-python                         1.2.0         py312hdb49522_1          conda-forge
  bzip2                                 1.0.8         hda65f42_8               conda-forge
  c-ares                                1.34.6        hb03c661_0               conda-forge
  ca-certificates                       2025.11.12    hbd8a1cb_0               conda-forge
  cached-property                       1.5.2         hd8ed1ab_1               conda-forge
  cached_property                       1.5.2         pyha770c72_1             conda-forge
  cairo                                 1.18.4        he90730b_1               conda-forge
  cairomm                               1.16.2        ha770c72_1               conda-forge
  cairomm-1.16                          1.16.2        h7e731d7_1               conda-forge
  certifi                               2025.11.12    pyhd8ed1ab_0             conda-forge
  cffi                                  2.0.0         py312h460c074_1          conda-forge
  charset-normalizer                    3.4.4         pyhd8ed1ab_0             conda-forge
  colorama                              0.4.6         pyhd8ed1ab_1             conda-forge
  contourpy                             1.3.3         py312hd9148b4_3          conda-forge
  cuda-version                          12.9          h4f385c5_3               conda-forge
  cycler                                0.12.1        pyhcf101f3_2             conda-forge
  dav1d                                 1.2.1         hd590300_0               conda-forge
  dbus                                  1.16.2        h24cb091_1               conda-forge
  dendropy                              5.0.8         pyhdfd78af_1             bioconda   
  docopt                                0.6.2         pyhd8ed1ab_2             conda-forge
  epoxy                                 1.5.10        hb03c661_2               conda-forge
  expat                                 2.7.3         hecca717_0               conda-forge
  ffmpeg                                8.0.1         gpl_hf567e27_908         conda-forge
  font-ttf-dejavu-sans-mono             2.37          hab24e00_0               conda-forge
  font-ttf-inconsolata                  3.000         h77eed37_0               conda-forge
  font-ttf-source-code-pro              2.038         h77eed37_0               conda-forge
  font-ttf-ubuntu                       0.83          h77eed37_3               conda-forge
  fontconfig                            2.15.0        h7e30c49_1               conda-forge
  fonts-conda-ecosystem                 1             0                        conda-forge
  fonts-conda-forge                     1             hc364b38_1               conda-forge
  fonttools                             4.61.1        py312h8a5da7c_0          conda-forge
  freetype                              2.14.1        ha770c72_0               conda-forge
  fribidi                               1.0.16        hb03c661_0               conda-forge
  gdk-pixbuf                            2.44.4        h2b0a6b4_0               conda-forge
  gettext                               0.25.1        h3f43e3d_1               conda-forge
  gettext-tools                         0.25.1        h3f43e3d_1               conda-forge
  glib-tools                            2.86.3        hf516916_0               conda-forge
  glslang                               16.1.0        hfd11570_0               conda-forge
  gmp                                   6.3.0         hac33072_2               conda-forge
  graph-tool                            2.98          py312h302780e_301        conda-forge
  graph-tool-base                       2.98          py312h8e10fa2_301        conda-forge
  graphite2                             1.3.14        hecca717_2               conda-forge
  gtk3                                  3.24.43       h993cebd_6               conda-forge
  h2                                    4.3.0         pyhcf101f3_0             conda-forge
  h5py                                  3.15.1        nompi_py312ha4f8f14_101  conda-forge
  harfbuzz                              12.3.0        h6083320_0               conda-forge
  hdbscan                               0.8.41        py312h4f23490_0          conda-forge
  hdf5                                  1.14.6        nompi_h1b119a7_104       conda-forge
  hicolor-icon-theme                    0.17          ha770c72_2               conda-forge
  hpack                                 4.1.0         pyhd8ed1ab_0             conda-forge
  hyperframe                            6.1.0         pyhd8ed1ab_0             conda-forge
  icu                                   78.1          h33c6efd_0               conda-forge
  idna                                  3.11          pyhd8ed1ab_0             conda-forge
  intel-gmmlib                          22.9.0        hb700be7_0               conda-forge
  intel-media-driver                    25.3.4        hecca717_0               conda-forge
  joblib                                1.5.3         pyhd8ed1ab_0             conda-forge
  kernel-headers_linux-64               5.14.0        he073ed8_3               conda-forge
  keyutils                              1.6.3         hb9d3cd8_0               conda-forge
  kiwisolver                            1.4.9         py312h0a2e395_2          conda-forge
  krb5                                  1.21.3        h659f571_0               conda-forge
  lame                                  3.100         h166bdaf_1003            conda-forge
  lcms2                                 2.17          h717163a_0               conda-forge
  ld_impl_linux-64                      2.45          default_hbd61a6d_105     conda-forge
  lerc                                  4.0.0         h0aef613_1               conda-forge
  level-zero                            1.26.3        hb700be7_0               conda-forge
  libabseil                             20250512.1    cxx17_hba17884_0         conda-forge
  libaec                                1.1.4         h3f801dc_0               conda-forge
  libasprintf                           0.25.1        h3f43e3d_1               conda-forge
  libasprintf-devel                     0.25.1        h3f43e3d_1               conda-forge
  libass                                0.17.4        h96ad9f0_0               conda-forge
  libblas                               3.11.0        5_h4a7cf45_openblas      conda-forge
  libboost                              1.86.0        hd24cca6_5               conda-forge
  libboost-python                       1.86.0        py312hf890105_5          conda-forge
  libbrotlicommon                       1.2.0         hb03c661_1               conda-forge
  libbrotlidec                          1.2.0         hb03c661_1               conda-forge
  libbrotlienc                          1.2.0         hb03c661_1               conda-forge
  libcap                                2.77          h3ff7636_0               conda-forge
  libcblas                              3.11.0        5_h0358290_openblas      conda-forge
  libcups                               2.3.3         hb8b1518_5               conda-forge
  libcurl                               8.17.0        h4e3cde8_1               conda-forge
  libdeflate                            1.25          h17f619e_0               conda-forge
  libdrm                                2.4.125       hb03c661_1               conda-forge
  libedit                               3.1.20250104  pl5321h7949ede_0         conda-forge
  libegl                                1.7.0         ha4b6fd6_2               conda-forge
  libegl-devel                          1.7.0         ha4b6fd6_2               conda-forge
  libev                                 4.33          hd590300_2               conda-forge
  libexpat                              2.7.3         hecca717_0               conda-forge
  libffi                                3.5.2         h9ec8514_0               conda-forge
  libflac                               1.5.0         he200343_1               conda-forge
  libfreetype                           2.14.1        ha770c72_0               conda-forge
  libfreetype6                          2.14.1        h73754d4_0               conda-forge
  libgcc                                15.2.0        he0feb66_16              conda-forge
  libgcc-ng                             15.2.0        h69a702a_16              conda-forge
  libgettextpo                          0.25.1        h3f43e3d_1               conda-forge
  libgettextpo-devel                    0.25.1        h3f43e3d_1               conda-forge
  libgfortran                           15.2.0        h69a702a_16              conda-forge
  libgfortran5                          15.2.0        h68bc16d_16              conda-forge
  libgirepository                       1.84.0        hac26d07_4               conda-forge
  libgl                                 1.7.0         ha4b6fd6_2               conda-forge
  libgl-devel                           1.7.0         ha4b6fd6_2               conda-forge
  libglib                               2.86.3        h6548e54_0               conda-forge
  libglvnd                              1.7.0         ha4b6fd6_2               conda-forge
  libglx                                1.7.0         ha4b6fd6_2               conda-forge
  libglx-devel                          1.7.0         ha4b6fd6_2               conda-forge
  libgomp                               15.2.0        he0feb66_16              conda-forge
  libhwloc                              2.12.1        default_hafda6a7_1003    conda-forge
  libiconv                              1.18          h3b78370_2               conda-forge
  libjpeg-turbo                         3.1.2         hb03c661_0               conda-forge
  liblapack                             3.11.0        5_h47877c9_openblas      conda-forge
  liblzma                               5.8.1         hb9d3cd8_2               conda-forge
  libnghttp2                            1.67.0        had1ee68_0               conda-forge
  libnsl                                2.0.1         hb9d3cd8_1               conda-forge
  libogg                                1.3.5         hd0c01bc_1               conda-forge
  libopenblas                           0.3.30        pthreads_h94d23a6_4      conda-forge
  libopenvino                           2025.4.1      hb56ce9e_0               conda-forge
  libopenvino-auto-batch-plugin         2025.4.1      hd85de46_0               conda-forge
  libopenvino-auto-plugin               2025.4.1      hd85de46_0               conda-forge
  libopenvino-hetero-plugin             2025.4.1      hd41364c_0               conda-forge
  libopenvino-intel-cpu-plugin          2025.4.1      hb56ce9e_0               conda-forge
  libopenvino-intel-gpu-plugin          2025.4.1      hb56ce9e_0               conda-forge
  libopenvino-intel-npu-plugin          2025.4.1      hb56ce9e_0               conda-forge
  libopenvino-ir-frontend               2025.4.1      hd41364c_0               conda-forge
  libopenvino-onnx-frontend             2025.4.1      h1862bb8_0               conda-forge
  libopenvino-paddle-frontend           2025.4.1      h1862bb8_0               conda-forge
  libopenvino-pytorch-frontend          2025.4.1      hecca717_0               conda-forge
  libopenvino-tensorflow-frontend       2025.4.1      h0767aad_0               conda-forge
  libopenvino-tensorflow-lite-frontend  2025.4.1      hecca717_0               conda-forge
  libopus                               1.6           h0fd0de7_0               conda-forge
  libpciaccess                          0.18          hb9d3cd8_0               conda-forge
  libpng                                1.6.53        h421ea60_0               conda-forge
  libprotobuf                           6.31.1        h49aed37_4               conda-forge
  librsvg                               2.60.0        h61e6d4b_0               conda-forge
  libsndfile                            1.2.2         hc7d488a_2               conda-forge
  libsqlite                             3.51.1        hf4e2dac_1               conda-forge
  libssh2                               1.11.1        hcf80075_0               conda-forge
  libstdcxx                             15.2.0        h934c35e_16              conda-forge
  libstdcxx-ng                          15.2.0        hdf11a46_16              conda-forge
  libsystemd0                           258.3         h6569c3e_0               conda-forge
  libtiff                               4.7.1         h9d88235_1               conda-forge
  libudev1                              258.3         h6569c3e_0               conda-forge
  libunwind                             1.8.3         h65a8314_0               conda-forge
  liburing                              2.12          hb700be7_0               conda-forge
  libusb                                1.0.29        h73b1eb8_0               conda-forge
  libuuid                               2.41.3        h5347b49_0               conda-forge
  libva                                 2.23.0        he1eb515_0               conda-forge
  libvorbis                             1.3.7         h54a6638_2               conda-forge
  libvpl                                2.15.0        h54a6638_1               conda-forge
  libvpx                                1.15.2        hecca717_0               conda-forge
  libvulkan-loader                      1.4.328.1     h5279c79_0               conda-forge
  libwebp-base                          1.6.0         hd42ef1d_0               conda-forge
  libxcb                                1.17.0        h8a09558_0               conda-forge
  libxcrypt                             4.4.36        hd590300_1               conda-forge
  libxkbcommon                          1.13.1        hca5e8e5_0               conda-forge
  libxml2                               2.15.1        he237659_1               conda-forge
  libxml2-16                            2.15.1        hca6bf5a_1               conda-forge
  libzlib                               1.3.1         hb9d3cd8_2               conda-forge
  mandrake                              1.2.5         py312h85baa9b_0          conda-forge
  matplotlib-base                       3.10.8        py312he3d6523_0          conda-forge
  mpg123                                1.32.9        hc50e24c_0               conda-forge
  munkres                               1.1.4         pyhd8ed1ab_1             conda-forge
  narwhals                              2.14.0        pyhcf101f3_0             conda-forge
  ncurses                               6.5           h2d0b736_3               conda-forge
  networkx                              3.6.1         pyhcf101f3_0             conda-forge
  numpy                                 2.4.0         py312h33ff503_0          conda-forge
  ocl-icd                               2.3.3         hb9d3cd8_0               conda-forge
  openblas                              0.3.30        pthreads_h6ec200e_4      conda-forge
  opencl-headers                        2025.06.13    h5888daf_0               conda-forge
  openh264                              2.6.0         hc22cd8d_0               conda-forge
  openjpeg                              2.5.4         h55fea9a_0               conda-forge
  openssl                               3.6.0         h26f9b46_0               conda-forge
  packaging                             25.0          pyh29332c3_1             conda-forge
  pandas                                2.3.3         py312hf79963d_1          conda-forge
  pango                                 1.56.4        hadf4263_0               conda-forge
  pcre2                                 10.47         haa7fec5_0               conda-forge
  pillow                                12.0.0        py312h50c33e8_2          conda-forge
  pip                                   25.3          pyh8b19718_0             conda-forge
  pixman                                0.46.4        h54a6638_1               conda-forge
  plotly                                6.5.0         pyhd8ed1ab_0             conda-forge
  poppunk                               2.7.7         py312hc15d307_0          bioconda   
  pp-sketchlib                          2.1.5         py312ha1e97ca_3          conda-forge
  pthread-stubs                         0.4           hb9d3cd8_1002            conda-forge
  pugixml                               1.15          h3f63f65_0               conda-forge
  pulseaudio-client                     17.0          h9a6aba3_3               conda-forge
  pycairo                               1.29.0        py312h2596900_0          conda-forge
  pycparser                             2.22          pyh29332c3_1             conda-forge
  pygobject                             3.54.5        py312hd86a0b5_2          conda-forge
  pyparsing                             3.3.1         pyhcf101f3_0             conda-forge
  pysocks                               1.7.1         pyha55dd90_7             conda-forge
  python                                3.12.12       hd63d673_1_cpython       conda-forge
  python-dateutil                       2.9.0.post0   pyhe01879c_2             conda-forge
  python-tzdata                         2025.3        pyhd8ed1ab_0             conda-forge
  python_abi                            3.12          8_cp312                  conda-forge
  pytz                                  2025.2        pyhd8ed1ab_0             conda-forge
  qhull                                 2020.2        h434a139_5               conda-forge
  rapidnj                               2.3.2         h9948957_6               bioconda   
  readline                              8.3           h853b02a_0               conda-forge
  requests                              2.32.5        pyhcf101f3_1             conda-forge
  scikit-learn                          1.8.0         np2py312h3226591_1       conda-forge
  scipy                                 1.16.3        py312h54fa4ab_2          conda-forge
  sdl2                                  2.32.56       h54a6638_0               conda-forge
  sdl3                                  3.2.28        h3b84278_0               conda-forge
  setuptools                            80.9.0        pyhff2d567_0             conda-forge
  shaderc                               2025.5        h3e344bc_0               conda-forge
  sigcpp-3.0                            3.6.0         h59595ed_0               conda-forge
  six                                   1.17.0        pyhe01879c_1             conda-forge
  snappy                                1.2.2         h03e3b7b_1               conda-forge
  sparsehash                            2.0.4         hcb278e6_1               conda-forge
  spirv-tools                           2025.4        hb700be7_0               conda-forge
  svt-av1                               3.1.2         hecca717_0               conda-forge
  sysroot_linux-64                      2.34          h087de78_3               conda-forge
  tbb                                   2022.3.0      h8d10470_1               conda-forge
  threadpoolctl                         3.6.0         pyhecae5ae_0             conda-forge
  tk                                    8.6.13        noxft_ha0e22de_103       conda-forge
  tqdm                                  4.67.1        pyhd8ed1ab_1             conda-forge
  treeswift                             1.1.45        pyh7e72e81_0             bioconda   
  tzdata                                2025c         hc9c84f9_1               conda-forge
  unicodedata2                          17.0.0        py312h4c3975b_1          conda-forge
  urllib3                               2.6.2         pyhd8ed1ab_0             conda-forge
  wayland                               1.24.0        hd6090a7_1               conda-forge
  wayland-protocols                     1.47          hd8ed1ab_0               conda-forge
  wheel                                 0.45.1        pyhd8ed1ab_1             conda-forge
  x264                                  1!164.3095    h166bdaf_2               conda-forge
  x265                                  3.5           h924138e_3               conda-forge
  xkeyboard-config                      2.46          hb03c661_0               conda-forge
  xorg-libice                           1.1.2         hb9d3cd8_0               conda-forge
  xorg-libsm                            1.2.6         he73a12e_0               conda-forge
  xorg-libx11                           1.8.12        h4f16b4b_0               conda-forge
  xorg-libxau                           1.0.12        hb03c661_1               conda-forge
  xorg-libxaw                           1.0.16        hb9d3cd8_0               conda-forge
  xorg-libxcomposite                    0.4.6         hb9d3cd8_2               conda-forge
  xorg-libxcursor                       1.2.3         hb9d3cd8_0               conda-forge
  xorg-libxdamage                       1.1.6         hb9d3cd8_0               conda-forge
  xorg-libxdmcp                         1.1.5         hb03c661_1               conda-forge
  xorg-libxext                          1.3.6         hb9d3cd8_0               conda-forge
  xorg-libxfixes                        6.0.2         hb03c661_0               conda-forge
  xorg-libxi                            1.8.2         hb9d3cd8_0               conda-forge
  xorg-libxinerama                      1.1.5         h5888daf_1               conda-forge
  xorg-libxmu                           1.2.1         hb9d3cd8_1               conda-forge
  xorg-libxpm                           3.5.17        hb9d3cd8_1               conda-forge
  xorg-libxrandr                        1.5.4         hb9d3cd8_0               conda-forge
  xorg-libxrender                       0.9.12        hb9d3cd8_0               conda-forge
  xorg-libxscrnsaver                    1.2.4         hb9d3cd8_0               conda-forge
  xorg-libxt                            1.3.1         hb9d3cd8_0               conda-forge
  xorg-libxtst                          1.2.5         hb9d3cd8_3               conda-forge
  xorg-libxxf86vm                       1.1.6         hb9d3cd8_0               conda-forge
  xorg-xextproto                        7.3.0         hb9d3cd8_1004            conda-forge
  xorg-xorgproto                        2025.1        hb03c661_0               conda-forge
  zlib                                  1.3.1         hb9d3cd8_2               conda-forge
  zlib-ng                               2.3.2         hceb46e0_1               conda-forge
  zstandard                             0.25.0        py312h5253ce2_1          conda-forge
  zstd                                  1.5.7         hb78ec9c_6               conda-forge
```

</details>

Full documentation: [https://poppunk.readthedocs.io/en/latest/](https://poppunk.readthedocs.io/en/latest/)

PopPUNK is also available as a webtool: [https://www.poppunk.net/](https://www.poppunk.net/)

PopPUNK is a tool for clustering genomes.

*NOTE: This docker image is intended for the CLI usage of the PopPUNK tool. It has not been built with the full web-interface functionality in mind.*

## Example Usage

This example is for usage of PopPUNK for Streptococcus pneumoniae clustering using a database & reference files provided by the [Global Pneumococcal Sequencing Project](https://www.pneumogen.net/gps/training_command_line.html). An example S. pneumoniae genome can be obtained from [here](https://github.com/rpetit3/pbptyper/blob/main/test/SRR2912551.fna.gz)

```bash
# poppunk requires an input File Of File Names (FOFN). headerless TSV with a sample name (first column), followed by path to input FASTA
$ echo -e "SRR2912551\t/data/SRR2912551.fna.gz" > poppunk_input.tsv

# showing reference files, FASTA input, and poppunk_input.tsv
$ ls
GPS_v6/  GPS_v6_external_clusters.csv  SRR2912551.fna.gz  poppunk_input.tsv

# run the docker container interactively
# followed by poppunk command run inside the container
$ docker run --rm -ti -v ${PWD}:/data -u $(id -u):$(id -g) staphb/poppunk:2.6.2
$ poppunk_assign --db GPS_v6 --distances GPS_v6/GPS_v6.dists --query /data/poppunk_input.tsv --output docker_test --external-clustering GPS_v6_external_clusters.csv
PopPUNK: assign
        (with backend: sketchlib v2.0.0
         sketchlib: /opt/conda/envs/poppunk-env/lib/python3.10/site-packages/pp_sketchlib.cpython-310-x86_64-linux-gnu.so)

Graph-tools OpenMP parallelisation enabled: with 1 threads
Mode: Assigning clusters of query sequences

Loading previously refined model
Completed model loading
Sketching 1 genomes using 1 thread(s)
Progress (CPU): 1 / 1
Writing sketches to file
WARNING: versions of input databases sketches are different, results may not be compatible
Calculating distances using 1 thread(s)
Progress (CPU): 100.0%
Selected type isolate for distance QC is 10050_2#1
Network loaded: 42163 samples

Done
```
